# discord-help-bot

./: Cargo.toml  README.md
src/: main.rs
