[package]
name = "discord-help-bot"
version = "0.1.0"
authors = ["Štefan Prokop <sprokop1010@seznam.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.4.0", features = ["macros", "rt-multi-thread"] }
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend"], version = "0.10.4" }
